--- a/tags.html
+++ b/tags.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Tag Archive
+title: Project Review Archive
 description: "An archive of posts sorted by tag."
 comments: false
 ---
