--- a/categories.html
+++ b/categories.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Blog Categories
+title: Course Review Archive
 description: "An archive of posts sorted by category."
 comments: false
 ---
