--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@ The Department Academic Mentorship Program (DAMP) team, Aerospace Engineering, I
 </ul>
 
 <h1 id="the-team">The Team</h1>
-<p><img src="https://drive.google.com/uc?id=1_B714nnytqfWnsqTuydtAklAKqWum8A4" alt="cos" /></p>
+<p><img src="https://drive.google.com/file/d/1taj9Wh6YUdF_V50RojzhG_Pjg9F30vDD/view?usp=sharing" alt="cos" /></p>
 
-<p><img src="" alt="TEAM PHOTO" /></p>
+<p><img src="https://drive.google.com/uc?id=1zOJtvHBQJ3KKy00tAtXOrE9ArAjkAaO9" alt="TEAM PHOTO" /></p>
 <h1 id="contact-us">Contact Us</h1>
 
 <p>Feel free to reach out to us at <a href="mailto:kaysri2007@gmail.com">kaysri2007@gmail.com</a> or <a href="mailto:shashankoxy@gmail.com">shashankoxy@gmail.com</a>. We are here to help.</p>
