--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ The Department Academic Mentorship Program (DAMP) team, Aerospace Engineering, I
 </ul>
 
 <h1 id="the-team">The Team</h1>
-<p><img src="https://drive.google.com/file/d/1taj9Wh6YUdF_V50RojzhG_Pjg9F30vDD/view?usp=sharing" alt="cos" /></p>
+<p><img src="https://iitbaero.github.io/images/images/dampco.png" alt="cos" /></p>
 
 <p><img src="https://drive.google.com/uc?id=1zOJtvHBQJ3KKy00tAtXOrE9ArAjkAaO9" alt="TEAM PHOTO" /></p>
 <h1 id="contact-us">Contact Us</h1>
